# check-products

./: .dockerignore  .gitignore  API_ARCHITECTURE.md  API_CORRECTION.md  BACKEND_UPDATED.md  CATEGORY_ALGORITHM_TEST_REPORT.md  CLEANUP_COMPLETE.md  CONTRIBUTING.md  CURRENT_STATUS.md  DATABASE_SCHEMA.md  Dockerfile.backend  EMBEDDING_INTEGRATION.md  FINAL_REPORT.md  GEMINI.md  INTEGRATION_STEPS.md  INTEGRATION_STRATEGY.md  LICENSE  MIGRATION_PLAN.md  Makefile  POS_เพิ่มสินค้า_20250727_063658_จากไฟล์สินค้าใหม่.csv  PROJECT_STRUCTURE.md  QUICK_REFERENCE.md  README.md  README_CLASSIFIER.md  REAL_DATABASE_RELATIONSHIPS.md  SHARED_SCORING_CHANGES.md  START_HERE.md  STATUS_CHECK_FINAL.md  SUMMARY_ARCHITECTURE.md  SUPABASE_SYSTEM_ARCHITECTURE.md  SYSTEM_OVERVIEW_TH.md  TEST_SUMMARY.md  advanced_models.py  antigravity_specialist.py  api_server.py  business_enhancement_strategy.py  clean_csv_products.py  cleaned_products.csv  cleanup_script.py  cli.py  (+48 more)
.gemini/: settings.json
archive/: api_server_backup.py  main_old_backup.py
docs/: INDEX.md  ORGANIZATION_SUMMARY.md  README_COMPLETE.md  api-reference.md  architecture.md  capabilities-summary.md
evaluation_results/: README.md  category_eval_comparison_20251004_102721.md  category_eval_comparison_20251004_103546.md  category_eval_comparison_20260406_101455.md  category_eval_embedding_20251004_103546.json  category_eval_embedding_20260406_101455.json  category_eval_hybrid_20251004_102721.json  category_eval_hybrid_20251004_103546.json  category_eval_hybrid_20260406_101455.json  category_eval_keyword_20251004_102721.json  category_eval_keyword_20251004_103546.json  category_eval_keyword_20260406_101455.json
input/: รายการสินค้าพร้อมหมวดหมู่_AI.txt
scripts/: audit_frontend.py  cleanup_unanalyzed.js  cleanup_unanalyzed.py  debug_db_encoding.py  debug_embedding_type.py  debug_node_embedding_type.py  execute_new_rules.py  find_missing_rules.py  fix_missing_embeddings.py  import_lessons.py  list_all_categories.py  list_rules.py  list_rules_v2.py  process_new_products.py  read_input_file.py  standardized_import_pipeline.py  sync_taxonomy_with_lessons.py  sync_taxonomy_with_lessons_v2.py  test_hybrid_api.py  test_real_classification.py  test_ui_db_sync.py  verify_category_mapping.py  verify_category_mapping_v2.py
sentence_transformers/: __init__.py  util.py
src/: __init__.py  __init___backup.py  app.py
taxonomy-app/: CHANGELOG.md  DEDUPLICATION_WORKFLOW.md  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  DEPLOY_LOCAL_MODEL.md  Dockerfile  README.md  README_DATABASE.md  SUPABASE_CLI_INSTALL.md  TESTING.md  apply_functions.sql  check_functions.sql  check_keyword_rules.sql  create_exec_sql.sql  current-schema.sql  fix_embedding_dimension.sql  fix_imports_rls.sql  fix_storage_policy.sql  fix_table_policies.sql  jest.config.js  jest.env.setup.js  jest.integration.config.js  jest.integration.setup.js  jest.setup.js  new_keyword_rules_v1.sql  new_keyword_rules_v2.sql  new_keyword_rules_v3.sql  new_keyword_rules_v4.sql  next.config.js  package-lock.json  package.json  playwright.config.ts  quick_test_data.sql  sample_taxonomy_data.sql  schema.sql  setup.md  tailwind.config.js  test_all_functions.sql  test_connection.js  test_functions.js  (+2 more)
test_mocks/: __init__.py  util.py
tests/: README.md  benchmark_similarity.py  test_smoke.py  (+4 more)
(+303 files in other folders)
